fix border issue on iphone safari

--- a/src/assets/less/critical.less
+++ b/src/assets/less/critical.less
@@ -21,7 +21,7 @@
         /* SVG Wave Styling */
         .custom-shape-divider-bottom-1723321338 {
             position: absolute;
-            bottom: 0;
+            bottom: -.1rem;
             left: 0;
             width: 100%;
             overflow: hidden;
